--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -33,6 +33,10 @@ jobs:
       # Override language selection by uncommenting this and choosing your languages
       with:
         languages: javascript, java
+
+    - uses: github/codeql-action/init@v1
+    with:
+      config-file: ./.github/codeql/codeql-config.yml
     
     # Java 11
     - name: Set up JDK 1.11
