--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -32,8 +32,9 @@ jobs:
       uses: github/codeql-action/init@v1
       # Override language selection by uncommenting this and choosing your languages
       with:
-        config-file: ./.github/codeql/codeql-config.yml
         languages: javascript, java
+        # Point to a custom configuration
+        config-file: ./.github/codeql/codeql-config.yml
 
     # Java 11
     - name: Set up JDK 1.11
