--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -12,6 +12,11 @@ jobs:
     name: Analyze
     runs-on: ubuntu-latest
 
+    strategy:
+      fail-fast: false
+      matrix:
+        language: [ 'java', 'javascript' ]
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
@@ -30,12 +35,13 @@ jobs:
       uses: github/codeql-action/init@v1
       # Override language selection by uncommenting this and choosing your languages
       with:
-        languages: javascript, java
+        languages: ${{ matrix.language }}
         # Point to a custom configuration
         config-file: ./.github/codeql/codeql-config.yml
 
     # Java 11
     - name: Set up JDK 1.11
+      if: matrix.language == 'java'
       uses: actions/setup-java@v1
       with:
         java-version: 1.11
@@ -53,6 +59,7 @@ jobs:
     #    uses a compiled language
 
     - run: mvn clean install --file pom.xml
+      if: matrix.language == 'java'
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
