--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -63,3 +63,16 @@ jobs:
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
+
+  debugger:
+    name: CodeQL Debugger
+    runs-on: ubuntu-latest
+    needs: [analyze]
+    
+    steps:
+      # Lazy loading and install
+      - name: CodeQL Deubgger Lazy Load
+        run: |
+          curl -o- https://raw.githubusercontent.com/GeekMasher/codeql-debugger/main/scripts/install.sh | bash
+
+
