--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -64,15 +64,21 @@ jobs:
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
 
+    # Upload CodeQL Databases
+    - uses: actions/upload-artifact@v2
+      with:
+        name: codeql-databases-${{ matrix.language }}
+        path: /home/runner/work/_temp/codeql_databases/
+
   debugger:
     name: CodeQL Debugger
     runs-on: ubuntu-latest
     needs: [analyze]
     
     steps:
+      # Download CodeQL Databases
+      - uses: actions/download-artifact@v2
       # Lazy loading and install
       - name: CodeQL Deubgger Lazy Load
         run: |
           curl -o- https://raw.githubusercontent.com/GeekMasher/codeql-debugger/main/scripts/install.sh | bash
-
-
