--- a/.github/codeql/codeql-config.yml
+++ b/.github/codeql/codeql-config.yml
@@ -6,3 +6,8 @@ queries:
   # Enabling custom rule from lcartey/ql repo (CVE-020)
   - name: Code Scanning using improved Spring Support
     uses: lcartey/ql/java/ql/src/Security/CWE/CWE-020/UntrustedDataToExternalAPI.ql@java/untrusted-data-to-external-api-290620
+  
+  - name: Use @GeekMasher CWE-532 query
+    uses: GeekMasher/security-queries/java/CWE-532/SensativeInformation.ql@main
+
+
