--- a/.github/codeql/codeql-config.yml
+++ b/.github/codeql/codeql-config.yml
@@ -6,5 +6,6 @@ queries:
 
   - name: Use @GeekMasher CWE-532 query
     uses: GeekMasher/security-queries/java/CWE-532/SensativeInformation.ql@main
-
+   
+  - uses: github/codeql/java/ql/src/Security/CWE/CWE-020/UntrustedDataToExternalAPI.ql@main
 
