--- a/.github/codeql/codeql-config.yml
+++ b/.github/codeql/codeql-config.yml
@@ -6,7 +6,7 @@ queries:
 
 #   - name: Use @GeekMasher CWE-532 query
 #     uses: GeekMasher/security-queries/java/CWE-532/SensativeInformation.ql@main
-  - uses: .github/codeql/SensativeInformation.ql
+  - uses: ./.github/codeql/SensativeInformation.ql
 
    
   - uses: github/codeql/java/ql/src/Security/CWE/CWE-020/UntrustedDataToExternalAPI.ql@main
