--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -50,40 +50,20 @@ jobs:
       with:
         java-version: 1.11
 
-    # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
-    # If this step fails, then you should remove it and run the build manually (see below)
-    #- name: Autobuild
-    #  uses: github/codeql-action/autobuild@v1
-
-    # ℹ️ Command-line programs to run using the OS shell.
-    # 📚 https://git.io/JvXDl
-
-    # ✏️ If the Autobuild fails above, remove it and uncomment the following three lines
-    #    and modify them (or add more) to build your code if your project
-    #    uses a compiled language
-
     - run: mvn clean install --file pom.xml
       if: matrix.language == 'java'
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
 
-    # Upload CodeQL Databases
-    - uses: actions/upload-artifact@v2
+    - name: Debug Analysis
+      uses: GeekMasher/codeql-debug@master
       with:
-        name: codeql-databases-${{ matrix.language }}
-        path: /home/runner/work/_temp/codeql_databases/
+        language: ${{ matrix.language }}
 
-  debugger:
-    name: CodeQL Debugger
-    runs-on: ubuntu-latest
-    needs: [analyze]
-    
-    steps:
-      # Download CodeQL Databases
-      - uses: actions/download-artifact@v2
-      # Lazy loading and install
-      - name: CodeQL Deubgger Lazy Load
-        continue-on-error: true
-        run: |
-          curl -o- https://raw.githubusercontent.com/GeekMasher/codeql-debugger/main/scripts/install.sh | bash
+    - name: Upload loc as a Build Artifact
+      uses: actions/upload-artifact@v2.2.0
+      with:
+        name: codeql-debug-results-${{ matrix.language }}
+        path: codeql-debug-results
+        retention-days: 30
