--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -2,10 +2,10 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [master, ]
+    branches: [ main, master ]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [master]
+    branches: [ main, master]
   workflow_dispatch:
 
 jobs:
@@ -19,40 +19,30 @@ jobs:
         language: [ 'java', 'javascript' ]
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-      with:
-        # We must fetch at least the immediate parents so that if this is
-        # a pull request then we can checkout the head.
-        fetch-depth: 2
+    - uses: actions/checkout@v2
 
-    # If this run was triggered by a pull request event, then checkout
-    # the head of the pull request instead of the merge commit.
-    - run: git checkout HEAD^2
-      if: ${{ github.event_name == 'pull_request' }}
-
-    # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v1
-      # Override language selection by uncommenting this and choosing your languages
       with:
         languages: ${{ matrix.language }}
-        # Point to a custom configuration
-        config-file: GeekMasher/security-queries/config/codeql.yml@main
+        queries: +security-extended
 
-    - name: Add CodeQL Customizations
-      uses: GeekMasher/security-queries/customize@customize-action
-
-    # Java 11
+    # WebGoat requires Java/JDK 11
     - name: Set up JDK 1.11
       if: matrix.language == 'java'
       uses: actions/setup-java@v1
       with:
         java-version: 1.11
 
+     # Delombok the code before the building step occurs
+    - name: Delombok
+      if: matrix.language == 'java'
+      uses: lcartey/delombok-action@main
+
+    # Use mvn command
     - run: mvn clean install --file pom.xml
       if: matrix.language == 'java'
 
+    # Run the Analysis
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
-
